@@ -1,3 +1,4 @@
+4/18/12 Replaced PSwing(JButton) with HTMLImageButtonNode, resolves #3310
 1/23/12 #3221, restore broken data collection (sim-sharing)
 10/28/11 Added event reporting when game starts or settings change, see #3136
 10/28/11 Added event reporting for end of game, see #3136
